--- a/index.html
+++ b/index.html
@@ -61,7 +61,19 @@
 <body>
 <div class="container">
     <header>
-        <div class="nav-bar"></div>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">WebSiteName</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Page 1</a></li>
+                    <li><a href="#">Page 2</a></li>
+                    <li><a href="#">Page 3</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
     <aside></aside>
     <div class="content"></div>
